@@ -13,6 +13,9 @@ Next Release
     to send it originally), we now rebuffer it in a way that will
     result in it being retried earlier than it used to be.
 
+  - When a listener process exits (unexpectedly) before transitioning
+    from the BUSY state, rebuffer the event that was being processed.
+
 3.0a2
 
   - Fixed the README.txt example for defining the supervisor RPC
